# stitch_calculator

./: .gitignore  Cargo.toml  index.html  stitch_calculator.js  stitch_calculator_bg.wasm
assets/: sw.js
docs/: index.html  stitch_calculator.js  stitch_calculator_bg.wasm
src/: app.rs  lib.rs  main.rs
src/app/: calc.rs
src/stitch/: mod.rs  specs.rs
src/ui_element/: center_panel.rs  left_panel.rs  menu_bar.rs  mod.rs
