[package]
name = "stitch_calculator"
version = "0.1.0"
authors = ["Alex Janninck"]
edition = "2021"


[dependencies]
eframe = { version = "0.22", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.22"
env_logger = "0.10"


[profile.release]
# strip = "symbols" or "debuginfo"
# lto = "thin"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3
