[package]
name = "stitch_calculator"
version = "0.1.1"
authors = ["Alex Janninck"]
edition = "2021"


[dependencies]
eframe = { version = "0.22", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.22"
env_logger = "0.10"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3

[profile.release-final]
inherits = "release"
strip = true
lto = "fat"
